--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">채널</h2>
             <ul>
-                <li><a href="./pages/channelList.html">channelList</a></li>
+                <li><a href="./pages/channelList.html">채널 리스트</a></li>
+                <li><a href="./pages/channel/channelInfo_01.html">채널 상세_관리자</a></li>
+                <li><a href="./pages/channel/channelManage.html">채널 상세_관리자_페이지</a></li>
+                <li><a href="./pages/channel/channelInfo_01.html">채널 상세_일반회원</a></li>
                 <li><a href="./pages/channel/channelInfo.html">채널 상세</a></li>
-                <li><a href="./pages/channel_member.html">channel_member</a></li>
-                <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
+                <li><a href="./pages/channel_member.html">채널 멤버</a></li>
+                <li><a href="./pages/channelQuestion.html">채널 문의</a></li>
                 <li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
                 <li><a href="./pages/channel/chnnelSubscriber.html">채널 구독자</a></li>
                 <li><a href="./pages/channel/channelMessage.html">채널 메세지</a></li>
