--- a/pages/member/step2.html
+++ b/pages/member/step2.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="white">
     <nav class="detail_page_top">
         <button class="back_btn">
             <img src="../../img/back_btn.png" alt="">
