--- a/pages/product/productRegistration_02.html
+++ b/pages/product/productRegistration_02.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <nav class="detail_page_top">
+    <nav class="detail_page_top border">
         <button class="back_btn">
             <img src="../../img/close_btn.svg" alt="">
         </button>
