--- a/pages/product/productRegistration_01.html
+++ b/pages/product/productRegistration_01.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    <nav class="detail_page_top">
+    <nav class="detail_page_top border">
         <button class="back_btn">
             <img src="../../img/close_btn.svg" alt="">
         </button>
