--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">채널</h2>
             <ul>
+                <li><a href="./pages/channel/channelCommunicate.html">한줄소통</a></li>
+                <li><a href="./pages/channel/channelCreate.html">채널생성</a></li>
                 <li><a href="./pages/channelList.html">채널 리스트</a></li>
                 <li><a href="./pages/channel/channelInfo_01.html">채널 상세_관리자</a></li>
                 <li><a href="./pages/channel/channelManage.html">채널 상세_관리자_페이지</a></li>
@@ -153,6 +155,8 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">회원가입</h2>
             <ul>
+                <li><a href="./pages/member/companyJoin01.html">사업자회원가입01</a></li>
+                <li><a href="./pages/member/companyJoin02.html">사업자회원가입02_휴대폰번호인증</a></li>
                 <li><a href="./pages/member/step1.html">step1</a></li>
                 <li><a href="./pages/member/step2.html">step2</a></li>
                 <li><a href="./pages/member/step3.html">step3</a></li>
