--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 
+
+
 </head>
 <body>
 
@@ -124,10 +126,13 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
+
                 <li><a href="./pages/product/productRegistration_01.html">상품등록01</a></li>
                 <li><a href="./pages/product/productRegistration_02.html">상품등록02</a></li>
                 <li><a href="./pages/product/productRegistration_03.html">상품등록03</a></li>
-                <li><a href="./pages/productDetail.html">product_detail</a></li>
+                <li><a href="./pages/product/productDetail.html">product_detail</a></li>
+                <li><a href="./pages/product/productInquiryManage.html">상품문의관리</a></li>
+                <li><a href="./pages/product/productInquiry.html">상품문의</a></li>
                 <li><a href="./pages/shoppingCart.html">shopping_cart</a></li>
             </ul>
         </div>
