--- a/pages/product/productDetail.html
+++ b/pages/product/productDetail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 
     <!--plugin css-->
     <link
@@ -18,7 +18,7 @@
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="../img/back_btn.png" alt="">
+            <img src="../../img/back_btn.png" alt="">
         </button>
 
         <div class="story_tit">
@@ -26,7 +26,7 @@
         </div>
 
         <button class="shopping_cart_btn">
-            <img src="../img/shopping_cart.png" alt="">
+            <img src="../../img/shopping_cart.png" alt="">
         </button>
     </nav>
 
@@ -37,10 +37,10 @@
             <div class="product_detail_swiper swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../img/no_image.jpg" alt="">
+                        <img src="../../img/no_image.jpg" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img src="../img/no_image.jpg" alt="">
+                        <img src="../../img/no_image.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -63,7 +63,7 @@
 
             <div class="info">
                 <div class="profile_img">
-                    <img src="../img/no_image.jpg" alt="">
+                    <img src="../../img/no_image.jpg" alt="">
                 </div>
 
                 <div class="cnt">
@@ -73,7 +73,7 @@
             </div>
 
             <div class="like_btn">
-                <img src="../img/heart_plus_18.svg" alt="">
+                <img src="../../img/heart_plus_18.svg" alt="">
             </div>
 
         </div>
@@ -105,7 +105,7 @@
 
 
             <!--탭내용-->
-            <div style="height: 100px;">
+            <div style="height: 500px;">
 
             </div>
             <!--//탭내용-->
@@ -120,7 +120,7 @@
 
         <div class="purchase row">
             <div class="like_btn">
-                <img src="../img/heart_gray.svg" alt="">
+                <img src="../../img/heart_gray.svg" alt="">
             </div>
             <button class="btn_style_02">구매하기</button>
         </div>
