--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">스토리</h2>
             <ul>
-                <li><a href="./pages/sotry/storyList.html">스토리리스트</a></li>
+                <li><a href="./pages/story/storyRegist.html">스토리 등록</a></li>
+                <li><a href="./pages/story/storyList.html">스토리리스트</a></li>
             </ul>
         </div>
 
@@ -133,6 +134,7 @@
                 <li><a href="./pages/product/productDetail.html">product_detail</a></li>
                 <li><a href="./pages/product/productInquiryManage.html">상품문의관리</a></li>
                 <li><a href="./pages/product/productInquiry.html">상품문의</a></li>
+                <li><a href="./pages/product/productAcTransfer.html">계좌이체</a></li>
                 <li><a href="./pages/shoppingCart.html">shopping_cart</a></li>
             </ul>
         </div>
