--- a/pages/storydetail.html
+++ b/pages/storydetail.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 
 </head>
 <body>
@@ -42,17 +44,17 @@
                         <p>qordmswl5631</p>
                         <div class="info">
                             <div>
-                                <img src="../img/Union.png" alt="">
+                                <i class="fas fa-clock"></i>
                                 <span>20시간전</span>
                             </div>
     
                             <div>
-                                <img src="../img/Union.png" alt="">
+                                <i class="fas fa-clock"></i>
                                 <span>32</span>
                             </div>
     
                             <div>
-                                <img src="../img/Union.png" alt="">
+                                <i class="fas fa-comment-dots"></i>
                                 <span>32</span>
                             </div>
                         </div>
@@ -94,7 +96,7 @@
         <div class="story_detail_bottom">
             <div class="title">
                 <div class="left">
-                    <img src="../img/Comments.png" alt="댓글">
+                    <img src="../img/Comments_black_16px.svg" alt="댓글">
                     <span>댓글</span>
                 </div>
 
