--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <h2 style="font-size: 15px;">의뢰 견적</h2>
             <ul>
                 <li><a href="./pages/request/ChannelRequest.html">채널의뢰서</a></li>
+                <li><a href="./pages/request/ChannelRequestDetail.html">채널의뢰상세</a></li>
                 <li><a href="./pages/request.html">request</a></li>
                 <li><a href="./pages/requestDetail.html">request_detail</a></li>
             </ul>
