--- a/pages/request/ChannelRequestDetail.html
+++ b/pages/request/ChannelRequestDetail.html
@@ -20,15 +20,15 @@
     </nav>
 
 
-    <div class="wrap channelRequest_detail_wraps">
+    <div class="wrap channelRequest_detail_wrap">
         <div class="top row">
-            <p>2021.12.25</p>
+            <p class="date">2021.12.25</p>
             <h1>의뢰제목</h1>
 
             <div class="count">
-                <div><i class="fas fa-heart"></i> 좋아요 <span>136</span></div>
+                <div><i class="fas fa-heart"></i> 좋아요  <span>136</span></div>
 
-                <div><i class="far fa-file-alt"></i> 견적건수 <span>136</span></div>
+                <div><i class="far fa-file-alt"></i> 견적건수  <span>136</span></div>
             </div>
             
             <div class="request_address_wrap">
@@ -39,6 +39,31 @@
 
                 <p>서울특별시 관악구 봉천동</p>
             </div>
+
+        </div>
+
+
+        <div class="bottom row">
+            <div class="list">
+                <p>의뢰분류</p>
+                <div class="cnt">인테리어 의뢰</div>
+            </div>
+
+            <div class="list">
+                <p>의뢰내용</p>
+                <div class="cnt">인테리어 의뢰</div>
+            </div>
+
+            <div class="list">
+                <p>의뢰자 분류</p>
+                <div class="cnt">채널</div>
+            </div>
+
+            <div class="list">
+                <p>의뢰자</p>
+                <div class="cnt">백은지</div>
+            </div>
+
 
         </div>
     </div>
