--- a/pages/request/ChannelRequestDetail.html
+++ b/pages/request/ChannelRequestDetail.html
@@ -42,7 +42,6 @@
 
         </div>
 
-
         <div class="bottom row">
             <div class="list">
                 <p>의뢰분류</p>
@@ -66,6 +65,16 @@
 
 
         </div>
+
     </div>
+
+
+    <div class="bottom_button">
+        <div class="bottom_btn_wrap row">
+            <button>의뢰서 삭제</button>
+            <button class="complete">의뢰서 수정</button>
+        </div>
+    </div>
+
 </body>
 </html>
