--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <li><a href="./pages/request/ChannelRequestDetail.html">채널의뢰상세</a></li>
                 <li><a href="./pages/request.html">request</a></li>
                 <li><a href="./pages/requestDetail.html">request_detail</a></li>
+                <li><a href="./pages/request/estimate.html">견적리스트</a></li>
             </ul>
         </div>
 
