--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                 <li><a href="./pages/request.html">request</a></li>
                 <li><a href="./pages/requestDetail.html">request_detail</a></li>
                 <li><a href="./pages/request/estimate.html">견적리스트</a></li>
+                <li><a href="./pages/request/estimateDetail.html">견적상세</a></li>
+                <li><a href="./pages/request/estimateDetail_02.html">견적내역서</a></li>
             </ul>
         </div>
 
