--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <li><a href="./pages/request/estimate.html">견적리스트</a></li>
                 <li><a href="./pages/request/estimateDetail.html">견적상세</a></li>
                 <li><a href="./pages/request/estimateDetail_02.html">견적내역서</a></li>
+                <li><a href="./pages/request/estimateRegister.html">견적등록</a></li>
             </ul>
         </div>
 
