--- a/pages/request/estimateDetail.html
+++ b/pages/request/estimateDetail.html
@@ -60,7 +60,7 @@
             </div>
 
 
-            <div class="btn_wrap blue">
+            <div class="btn_wrap type_01">
                 <button>전화걸기</button>
             </div>  
         </div>
