--- a/pages/request/estimateDetail_02.html
+++ b/pages/request/estimateDetail_02.html
@@ -63,7 +63,7 @@
                 <p>180,000원</p>             
             </div>
 
-            <div class="btn_wrap blue">
+            <div class="btn_wrap type_01">
                 <button>채택하기</button>
             </div>
         </div>
