--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
 </head>
 <body>
 
-    
 
 
     <div class="wrap" style="margin: 20px 50px;">
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">QR</h2>
+            <ul>
+                <li><a href="./pages/QR/qrLIst.html">큐알리스트</a></li>
+            </ul>
+        </div>
+
+
         
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">메인</h2>
