--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <li><a href="./pages/product/productInquiry.html">상품문의</a></li>
                 <li><a href="./pages/product/productAcTransfer.html">계좌이체</a></li>
                 <li><a href="./pages/shoppingCart.html">shopping_cart</a></li>
+                <li><a href="./pages/product/productReview.html">리뷰쓰기</a></li>
             </ul>
         </div>
 
