--- a/pages/QR/qrLIst.html
+++ b/pages/QR/qrLIst.html
@@ -38,6 +38,8 @@
         </div>
 
         <div class="bottom_area row">
+
+            <!--qr리스트-->
             <div class="qrlist_container">
                 <div class="list">
                     <div class="tit">
@@ -151,6 +153,8 @@
                 </div>
 
             </div>
+            <!--//qr리스트-->
+
         </div>
     </div>
 </body>
