--- a/pages/product/productReview.html
+++ b/pages/product/productReview.html
@@ -49,20 +49,76 @@
 
             <textarea class="default_type" placeholder="메모를 입력해주세요"></textarea>
 
-                
+            <!--사진첨부리스트-->      
             <div class="photo_list">
                 <div>
-                    <img src="../../img/no_image.jpg" alt="" style="width: 65px;">
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
                 </div>
 
                 <div>
-                    <img src="../../img/no_image.jpg" alt="" style="width: 65px;">
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="../../img/no_image.jpg" alt="" />
+                    <div class="remove">
+                        <i class="fas fa-times"></i>
+                    </div>
                 </div>
             </div>
+            <!--//사진첨부리스트-->
+
+            <button class="attach_btn">
+                <i class="far fa-camera"></i>
+                사진/동영상 첨부하기
+            </button>
+
+
         </div>
 
 
 
+    </div>
+
+    <div class="bottom_button">
+        <div class="bottom_btn_wrap row">
+            <button>취소</button>
+            <button class="complete">등록</button>
+        </div>
     </div>
 </body>
 </html>
