--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <h2 style="font-size: 15px;">위치설정</h2>
             <ul>
                 <li><a href="./pages/position/positionSearch.html">위치검색</a></li>
+                <li><a href="./pages/position/searchAround.html">주변검색</a></li>
                 <li><a href="./pages/position/positionSetting.html">위치설정</a></li>
             </ul>
         </div>
@@ -138,7 +139,7 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
-
+                <li><a href="./pages/product/productList.html">전체상품리스트</a></li>
                 <li><a href="./pages/product/productRegistration_01.html">상품등록01</a></li>
                 <li><a href="./pages/product/productRegistration_02.html">상품등록02</a></li>
                 <li><a href="./pages/product/productRegistration_03.html">상품등록03</a></li>
