--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                 <li><a href="./pages/product/productRegistration_01.html">상품등록01</a></li>
                 <li><a href="./pages/product/productRegistration_02.html">상품등록02</a></li>
                 <li><a href="./pages/product/productRegistration_03.html">상품등록03</a></li>
-                <li><a href="./pages/product/productDetail.html">product_detail</a></li>
+                <li><a href="./pages/product/productDetail.html">상품디테일</a></li>
+                <li><a href="./pages/product/productDetailReview.html">상품리뷰리스트</a></li>
                 <li><a href="./pages/product/productInquiryManage.html">상품문의관리</a></li>
                 <li><a href="./pages/product/productInquiry.html">상품문의</a></li>
                 <li><a href="./pages/product/productAcTransfer.html">계좌이체</a></li>
