--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
 
 
         <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">마이페이지</h2>
+            <ul>
+                <li><a href="./pages/mypage/mypoint.html">포인트</a></li>
+            </ul>
+        </div>
+
+
+
+
+        <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">로그인</h2>
             <ul>
                 <li><a href="./pages/login.html">로그인</a></li>
