--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <h2 style="font-size: 15px;">메인</h2>
             <ul>
                 <li><a href="./pages/main.html">main</a></li>
+                <li><a href="./pages/mainFloatingMenu.html">메인플로팅메뉴</a></li>
             </ul>
         </div>
 
