--- a/pages/main.html
+++ b/pages/main.html
@@ -57,16 +57,19 @@
         </div>
     </header>
 
-    <div class="wrap main_wrap">
+    <div class="main_wrap">
 
         <!--상단배너-->
         <div class="main_banner swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="../img/main_banner_01.jpg" alt="">
+                    <img src="../img/main_banner/banner_01.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                    <img src="../img/main_banner_01.jpg" alt="">
+                    <img src="../img/main_banner/banner_03.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../img/main_banner/banner_04.png" alt="">
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -653,7 +656,7 @@
             <div class="main_middle_banner">
                 <div class="row">
                     <div class="banner">
-                        배너영역
+                        <img src="../img/sub_banner/sub_banner_01.png" alt="">
                     </div>
                 </div>
             </div>
