--- a/pages/main.html
+++ b/pages/main.html
@@ -66,6 +66,9 @@
                     <img src="../img/main_banner/banner_01.png" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <img src="../img/main_banner/banner_02.png" alt="">
+                </div>
+                <div class="swiper-slide">
                     <img src="../img/main_banner/banner_03.png" alt="">
                 </div>
                 <div class="swiper-slide">
