--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
     <div class="wrap" style="margin: 20px 50px;">
 
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">랜딩페이지</h2>
+            <ul>
+                <li><a href="./pages/Landing/landingPage.html">랜딩페이지</a></li>
+            </ul>
+        </div>
+
+
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">QR</h2>
             <ul>
