--- a/pages/main.html
+++ b/pages/main.html
@@ -89,73 +89,49 @@
                         <ul>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_01@1x.png" alt="menu-link-1"
-                                    srcset="../img/main_link_01@1x.png 1x,
-                                    ../img/main_link_01@2x.png 2x,
-                                    ../img/main_link_01@3x.png 3x"/>
+                                    <div class="main_icon live"></div>
                                     <span>전체라이브</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_02@1x.png" alt="menu-link-2"
-                                    srcset="../img/main_link_02@1x.png 1x,
-                                    ../img/main_link_02@2x.png 2x,
-                                    ../img/main_link_02@3x.png 3x"/>
+                                    <div class="main_icon live_preview"></div>
                                     <span>라이브예고</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_03@1x.png" alt="menu-link-3"
-                                    srcset="../img/main_link_03@1x.png 1x,
-                                    ../img/main_link_03@2x.png 2x,
-                                    ../img/main_link_03@3x.png 3x"/>
+                                    <div class="main_icon store"></div>
                                     <span>전체상점</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_04@1x.png" alt="menu-link-4"
-                                    srcset="../img/main_link_04@1x.png 1x,
-                                    ../img/main_link_04@2x.png 2x,
-                                    ../img/main_link_04@3x.png 3x"/>
+                                    <div class="main_icon story"></div>
                                     <span>친구관리</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_05@1x.png" alt="menu-link-5"
-                                    srcset="../img/main_link_05@1x.png 1x,
-                                    ../img/main_link_05@2x.png 2x,
-                                    ../img/main_link_05@3x.png 3x"/>
-                                    <span>최근본상품</span>
+                                    <div class="main_icon channel"></div>
+                                    <span>전체 채널</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_06@1x.png" alt="menu-link-6"
-                                    srcset="../img/main_link_06@1x.png 1x,
-                                    ../img/main_link_06@2x.png 2x,
-                                    ../img/main_link_06@3x.png 3x" style="max-height: 25px;"/>
-                                    <span style="margin-top: 5px;">TOP10</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="../img/main_link_07@1x.png" alt="menu-link-7"
-                                    srcset="../img/main_link_07@1x.png 1x,
-                                    ../img/main_link_07@2x.png 2x,
-                                    ../img/main_link_07@3x.png 3x"/>
+                                    <div class="main_icon request"></div>
                                     <span>의뢰/견적</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="../img/main_link_08@1x.png" alt="menu-link-8"
-                                    srcset="../img/main_link_08@1x.png 1x,
-                                    ../img/main_link_08@2x.png 2x,
-                                    ../img/main_link_08@3x.png 3x"/>
+                                    <div class="main_icon product"></div>
+                                    <span>전체상품</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="main_icon event"></div>
                                     <span>이벤트</span>
                                 </a>
                             </li>
