--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
-<body>
+<body class="white">
 
 
 
     <div class="wrap" style="margin: 20px 50px;">
 
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">영상채팅</h2>
+            <ul>
+                <li><a href="./pages/video/videoChat.html">영상채팅</a></li>
+            </ul>
+        </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">랜딩페이지</h2>
