--- a/pages/main.html
+++ b/pages/main.html
@@ -96,7 +96,7 @@
                             <li>
                                 <a href="#">
                                     <div class="main_icon live_preview"></div>
-                                    <span>라이브예고</span>
+                                    <span>최근본상품</span>
                                 </a>
                             </li>
                             <li>
@@ -108,7 +108,7 @@
                             <li>
                                 <a href="#">
                                     <div class="main_icon story"></div>
-                                    <span>친구관리</span>
+                                    <span>전체 스토리</span>
                                 </a>
                             </li>
                             <li>
