--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상점</h2>
             <ul>
+                <li><a href="./pages/store/myStoreList.html">나의상점리스트</a></li>
                 <li><a href="./pages/store/storeManage.html">상점관리</a></li>
                 <li><a href="./pages/store/storeList.html">상점리스트</a></li>
                 <li><a href="./pages/store/storeinfo.html">상점상세페이지</a></li>
