--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">마이페이지</h2>
             <ul>
+                <li><a href="./pages/mypage/notice.html">공지사항</a></li>
                 <li><a href="./pages/mypage/mypoint.html">포인트</a></li>
             </ul>
         </div>
